feat: add all dbs ping in health request in each service; update health response
