# backend/gateway/api/docs/swagger.yaml
@@ -251,11 +251,11 @@ definitions:
   entities.HealthResponse:
     properties:
       application_service:
-        type: string
+        $ref: '#/definitions/entities.ServiceHealth'
       auth_service:
-        type: string
+        $ref: '#/definitions/entities.ServiceHealth'
       company_service:
-        type: string
+        $ref: '#/definitions/entities.ServiceHealth'
       gateway:
         type: string
     type: object
@@ -327,6 +327,19 @@ definitions:
         type: string
     type: object
   entities.RevokeTokenResponse:
+    type: object
+  entities.ServiceHealth:
+    properties:
+      minio:
+        type: string
+      mongo:
+        type: string
+      postgres:
+        type: string
+      redis:
+        type: string
+      service:
+        type: string
     type: object
   entities.TokenInfo:
     properties:
